# ml-specialization-demo2

./: .gitignore  package-lock.json  sandbox.ipynb
app/: .firebaserc  firebase.json  firestore.rules
app/frontend/: .firebaserc  .gitignore  README.md  angular.json  firebase.json  firestore.rules  package-lock.json  package.json  storage.rules  tsconfig.json
app/frontend/functions/: index.js  package-lock.json  package.json
app/frontend/src/: index.html  main.ts  test.ts
app/frontend/src/app/: app-routing.module.ts  app.component.css  app.component.html  app.component.spec.ts  app.component.ts  app.module.ts  datasets.ts
app/frontend/src/app/components/dataset-details/: dataset-details.component.css  dataset-details.component.html  dataset-details.component.spec.ts  (+1 more)
app/frontend/src/app/guard/: auth.guard.spec.ts  auth.guard.ts  login-page.guard.spec.ts  login-page.guard.ts
app/frontend/src/app/services/: auth.service.spec.ts  auth.service.ts  dataset-dao.service.spec.ts  dataset-dao.service.ts  predictions.service.spec.ts  predictions.service.ts  storage.service.spec.ts  storage.service.ts
app/frontend/src/environments/: environment.prod.ts  environment.ts
ml-finish-handler/: .gitignore  README.md  pom.xml
tfx-pipeline/: Dockerfile  Makefile  cloudbuild.yaml  kubeflow-vertex-runner.py  local_runner.py  pyproject.toml  requirements.txt  tfx-pipeline-ml-demo2-black-friday_pipeline.json  vertex_compile.py  vertex_run.py  vertex_run_new.py
tfx-pipeline/models/baseline/: model.py
tfx-pipeline/pipeline/: components.py  config.py  configs.py  pipeline.py
(+31 files in other folders)
