[project]
name = "tfx-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "appengine-python-standard>=1.1.6",
    "tensorflow==2.15.1",
    "tfx==1.15.1",
    "ml-metadata==1.15.0",
    "kfp>=2.5.0",
    "tensorflow-estimator>=2.15.0",
    "keras>=2.15.0",
    "keras-tuner>=1.4.7",
    "tensorflow-recommenders==0.6.0",
]
